Comence el ejercicio 4, modifique el ejercicio 2 para dejarlo mejor estructurado

--- a/Ejercicio 2/capitulo1.html
+++ b/Ejercicio 2/capitulo1.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Libro</title>
+    <link rel="stylesheet" href="/Ejercicio 4/estilos2/cap.css">
 </head>
 <body>
-    <h1>Capítulo 1  “El dibujo del elefante dentro de la serpiente”</h1>
-    <p>El narrador recuerda su infancia, cuando dibujó una boa que se tragaba un elefante. Los adultos no comprendían el dibujo y pensaban que era un sombrero. Así, el narrador abandonó su sueño de ser artista y decidió convertirse en piloto.</p>
-    <p>El capítulo destaca la falta de imaginación y comprensión de los adultos, quienes ven solo lo superficial. El narrador reflexiona sobre cómo los adultos se centran en lo práctico y olvidan la esencia de las cosas.</p>
-    
-
-    <a href="index.html">Índice</a>
-    <a href="capitulo2.html">Siguiente Capítulo</a>
-    
+    <div class="container">
+        <h1>Capítulo 1  “El dibujo del elefante dentro de la serpiente”</h1>
+        <div class="contenido">
+            <p>El narrador recuerda su infancia, cuando dibujó una boa que se tragaba un elefante. Los adultos no comprendían el dibujo y pensaban que era un sombrero. Así, el narrador abandonó su sueño de ser artista y decidió convertirse en piloto.</p>
+            <p>El capítulo destaca la falta de imaginación y comprensión de los adultos, quienes ven solo lo superficial. El narrador reflexiona sobre cómo los adultos se centran en lo práctico y olvidan la esencia de las cosas.</p>
+        </div>
+    <div class="links">
+        <a href="index.html">Índice</a>
+        <a href="capitulo2.html">Siguiente Capítulo</a>
+    </div>
+    </div>
 </body>
 </html>
