--- a/Ejercicio 2/capitulo3.html
+++ b/Ejercicio 2/capitulo3.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Libro</title>
-</head>
-<body>
-    <h1>Capítulo 3  “El planeta del principito”</h1>
-    <p>El principito empieza a hablar de su planeta de origen, muy pequeño, apenas más grande que una casa. Pregunta sobre los corderos y si comen arbustos, lo que lleva al narrador a sospechar que su planeta puede estar en peligro.</p>
-    <p>El principito menciona que su planeta tiene tres volcanes y una flor, que es una rosa. El narrador se da cuenta de que el principito está preocupado por su rosa y le pregunta si la ama. El principito responde que sí, pero también expresa su tristeza por la rosa, que es vanidosa y exige atención.</p>
-    <p>El capítulo destaca la relación entre el principito y su rosa, simbolizando el amor y la responsabilidad. El narrador comienza a comprender la profundidad de los sentimientos del principito hacia su hogar y su rosa.</p>
+    <link rel="stylesheet" href="/Ejercicio 4/estilos2/cap.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Capítulo 3 “El planeta del principito”</h1>
+      <div class="contenido">
+        <p>
+          El principito empieza a hablar de su planeta de origen, muy pequeño,
+          apenas más grande que una casa. Pregunta sobre los corderos y si comen
+          arbustos, lo que lleva al narrador a sospechar que su planeta puede
+          estar en peligro.
+        </p>
+        <p>
+          El principito menciona que su planeta tiene tres volcanes y una flor,
+          que es una rosa. El narrador se da cuenta de que el principito está
+          preocupado por su rosa y le pregunta si la ama. El principito responde
+          que sí, pero también expresa su tristeza por la rosa, que es vanidosa
+          y exige atención.
+        </p>
+        <p>
+          El capítulo destaca la relación entre el principito y su rosa,
+          simbolizando el amor y la responsabilidad. El narrador comienza a
+          comprender la profundidad de los sentimientos del principito hacia su
+          hogar y su rosa.
+        </p>
+      </div>
+      <div class="links">
+        <a href="capitulo2.html">Anterior Capítulo</a>
+        <a href="index.html">Índice</a>
 
-    <a href="index.html">Índice</a>
-    <a href="capitulo2.html">Anterior Capítulo</a>
-    <a href="capitulo4.html">Siguiente Capítulo</a>
-</body>
+        <a href="capitulo4.html">Siguiente Capítulo</a>
+      </div>
+    </div>
+  </body>
 </html>
