--- a/Ejercicio 2/capitulo4.html
+++ b/Ejercicio 2/capitulo4.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Libro</title>
-</head>
-<body>
-    <h1>Capítulo 4  “El asteroide B-612”</h1>
-    <p>El narrador revela que el planeta del principito es el asteroide B-612. Menciona que un astrónomo turco lo descubrió, pero fue ignorado por su forma de vestir. Años después, al presentarse con ropa occidental, su descubrimiento fue aceptado. El narrador reflexiona sobre cómo los adultos solo valoran cifras y datos.</p>
+    <link rel="stylesheet" href="/Ejercicio 4/estilos2/cap.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Capítulo 4 “El asteroide B-612”</h1>
+      <div class="contenido">
+        <p>
+          El narrador revela que el planeta del principito es el asteroide
+          B-612. Menciona que un astrónomo turco lo descubrió, pero fue ignorado
+          por su forma de vestir. Años después, al presentarse con ropa
+          occidental, su descubrimiento fue aceptado. El narrador reflexiona
+          sobre cómo los adultos solo valoran cifras y datos.
+        </p>
 
-    <p>El capítulo destaca la importancia de ver más allá de lo superficial y valorar lo esencial, que a menudo es invisible a los ojos. El principito comparte su amor por su rosa, que es única para él, y el narrador comienza a comprender la profundidad de su conexión con ella.</p>
-    <a href="index.html">Índice</a>
-    <a href="capitulo3.html">Anterior Capítulo</a>
-</body>
+        <p>
+          El capítulo destaca la importancia de ver más allá de lo superficial y
+          valorar lo esencial, que a menudo es invisible a los ojos. El
+          principito comparte su amor por su rosa, que es única para él, y el
+          narrador comienza a comprender la profundidad de su conexión con ella.
+        </p>
+      </div>
+      <div class="links">
+        <a href="capitulo3.html">Anterior Capítulo</a>
+        <a href="index.html">Índice</a>
+      </div>
+    </div>
+  </body>
 </html>
