--- a/Ejercicio 2/index.html
+++ b/Ejercicio 2/index.html
@@ -7,30 +7,39 @@ Capítulos: crear al menos cuatro capítulos en los que aparezca el título del 
 <head>
     <meta charset="UTF-8">
     <title>Libro</title>
+    <link rel="stylesheet" href="/Ejercicio 4/estilos2/index.css">
 </head>
 <body>
-    <h1><b>El Principito</b></h1>
-    <h2>Descripción:</h2>
-    <p><i><b>El Principito</b></i> es una historia poética y filosófica que narra el encuentro entre un aviador perdido en el desierto del Sahara y un pequeño príncipe que proviene de otro planeta, el asteroide B-612. A través de sus conversaciones, el principito relata su viaje por varios planetas y los encuentros con personajes simbólicos que representan aspectos de la sociedad humana, como el rey, el vanidoso, el bebedor, el hombre de negocios, el farolero y el geógrafo. <br><br>
+    <div class="container">
+        <h1><b>El Principito</b></h1>
+        <h2>Descripción:</h2>
+        <p id="descripcion"><i><b>El Principito</b></i> es una historia poética y filosófica que narra el encuentro entre un aviador perdido en el desierto del Sahara y un pequeño príncipe que proviene de otro planeta, el asteroide B-612. A través de sus conversaciones, el principito relata su viaje por varios planetas y los encuentros con personajes simbólicos que representan aspectos de la sociedad humana, como el rey, el vanidoso, el bebedor, el hombre de negocios, el farolero y el geógrafo. <br><br>
 
-    La obra trata temas como la amistad, el amor, la soledad, la pérdida, la esencia de las cosas y la visión del mundo desde la infancia.</p>
-    <h2>Frase famosa:</h2>
-    <p><i>"Lo esencial es invisible a los ojos"</i></p>
-    <img src="elprincipito.jpg" alt="Portada del libro El Principito" width="300" height="400">
-    <h2>Autor:</h2>
-    <p><i>Antoine de Saint-Exupéry</i></p>
-    <h2>Fecha de publicación:</h2>
-    <p><i>1943</i></p>
-    <h2>Género:</h2>
-    <p><i>Fábula, literatura infantil</i></p>
-    <h2>Editorial:</h2>
-    <p><i>Reynal & Hitchcock</i></p>
-    <h2>Índice:</h2>
-    <ul>
-        <li><a href="capitulo1.html">Capítulo 1: El encuentro</a></li>
-        <li><a href="capitulo2.html">Capítulo 2: El planeta del principito</a></li>
-        <li><a href="capitulo3.html">Capítulo 3: La rosa</a></li>
-        <li><a href="capitulo4.html">Capítulo 4: El zorro</a></li>
-    </ul>
+        La obra trata temas como la amistad, el amor, la soledad, la pérdida, la esencia de las cosas y la visión del mundo desde la infancia.</p>
+        <div class="cuerpo">
+            <div class="left">
+                <h2>Frase famosa:</h2>
+                <p><i>"Lo esencial es invisible a los ojos"</i></p>
+                
+                <h2>Autor:</h2>
+                <p><i>Antoine de Saint-Exupéry</i></p> <br>
+                <h2>Fecha de publicación:</h2> 
+                <p><i>1943</i></p> <br>
+                <h2>Género:</h2>
+                <p><i>Fábula, literatura infantil</i></p> <br>
+                <h2>Editorial:</h2>
+                <p><i>Reynal & Hitchcock</i></p> <br>
+                <h2>Índice:</h2>
+                <ul>
+                    <li><a href="capitulo1.html">Capítulo 1: El encuentro</a></li>
+                    <li><a href="capitulo2.html">Capítulo 2: El planeta del principito</a></li>
+                    <li><a href="capitulo3.html">Capítulo 3: La rosa</a></li>
+                    <li><a href="capitulo4.html">Capítulo 4: El zorro</a></li>
+                </ul>
+            </div>
+            <div class="right"><img src="elprincipito.jpg" alt="Portada del libro El Principito" width="300" height="400"></div>
+        </div>
+        
+    </div>
 </body>
 </html>
