agregue estilos al cv

--- a/Ejercicio 1/experiencia_laboral.html
+++ b/Ejercicio 1/experiencia_laboral.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CV</title>
+    <link rel="stylesheet" href="/Ejercicio 4/estilos1/style.css">
 </head>
 <body>
     <h1>Experiencia laboral:</h1>
