--- a/Ejercicio 1/index.html
+++ b/Ejercicio 1/index.html
@@ -8,14 +8,17 @@ Desde el index, se debe poder entrar a las otras 3 y desde cada una de las 3 se 
 Utilizar todos los elementos vistos previamente y respetar las Convenciones mencionadas. -->
 <!DOCTYPE html>
 <html lang="es">
-<head>
     <meta charset="UTF-8">
     <title>Ejercicio 1 DS</title>
+    <link rel="stylesheet" href="/Ejercicio 4/estilos1/style.css">
+
 </head>
 <body>
+    <img src="foto mia.jpg" alt="Foto profesional" class="foto-cv">
     <h1>Curriculum Vitae</h1>
     <h2>Información Personal:</h2>
     <p>Mi nombre es <b>Ignacio Benitez</b>, vivo en <b>Buenos Aires</b>. <br> Me considero una persona curiosa y creativa, con ganas de explorar diferentes áreas y siempre abierta a nuevos proyectos y experiencias. <br>  Me gusta aprender cosas nuevas y enfrentar desafíos que me permitan crecer profesionalmente.</p>
+    <div style="clear: both;"></div>
     <a href="estudios.html">Estudios</a>
     <a href="experiencia_laboral.html">Experiencia Laboral</a>
     <a href="hobbies.html">Hobbies</a>
